--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,3 +3,6 @@ app:
     resource: '@AppBundle/Controller/'
     type: annotation
 
+# app/config/routing.yml
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
