--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,8 +4,12 @@ security:
         FOS\UserBundle\Model\UserInterface: bcrypt
 
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: ROLE_ADMIN
+        ROLE_USER:          ROLE_USER #Eleve non affecte
+        ROLE_ELEVE_AFFECTE: ROLE_USER
+        ROLE_CHEF_ROJET:    ROLE_ELEVE_AFFECTE
+        ROLE_HELPER:        ROLE_CHEF_ROJET
+        ROLE_ADMIN:         ROLE_HELPER
+        ROLE_SUPER_ADMIN:   ROLE_ADMIN
 
     providers:
         fos_userbundle:
@@ -25,4 +29,5 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/, role: ROLE_ADMIN }
+        # - { path: ^/admin/, role: ROLE_ADMIN }
+        # - { path: ^/user/, role: ROLE_USER }
